...
                Text("Explore New Games")
                    .bold()
                    .foregroundColor(customWhite)
                
                Spacer()
            }
            .accessibilityIdentifier("ExploreGamesHeader")
            
            InputSearchFieldWithButton(inputText: $searchText, viewModel: viewModel)
            
            List {
                ForEach(viewModel.games) { game in
                    Button(action: {
...
